[tool.poetry]
name = "tox_example"
version = "0.1.0"
description = ""
authors = ["gagocaan <gagocaan@gmail.com>"]

packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
tox = "^3.25.0"
flake8 = "^4.0.1"
mypy = "^0.942"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[flake8]
max-line-length = 80

[tool.pytest.ini_options]
addopts = "--cov=src"
test_paths = ["tests"]

[tool.mypy]
mypy_path = "src"
